# RAG_CHATBOT_GENAI

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml
app/: app.py
src/chunking/: chunking.py
src/embedding/: embedder.py
src/llm/: llm.py
src/loaders/: loader.py
src/memory/: memory.py
src/pipeline/: rag_pipeline.py
src/preprocessing/: preprocess.py
src/reranker/: reranker.py
src/retriever/: retriever.py
src/vectorstore/: vectordb.py
